tests/integration/conformance/testdata/networking/sidecar/basic/input.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
spec:
  egress:
    - hosts:
        - "istio-system/*"
      port:
        # TODO: if not imported, disable mixer checks
        # Note mixer and policy are on same port - so listener generation will only create one port.
        # However this is fine, since envoy is using mixer only internally.
        number: 9091
        name: grpc-mixer
        protocol: GRPC
    - hosts:
        - "istio-system/*"
      port:
        number: 15004
        name: grpc-mixer-mtls
        protocol: GRPC
    - hosts:
        - none/*
        - default/test.default # TODO: without namespace it  fails validation !
      # TODO: if we include the namespace, why do we need full name ? Importing regular services should work.

  # Label selection seems to confuse the new code.
  ingress:
    - port:
        number: 7071
        protocol: HTTP
        name: httplocal
      default_endpoint: 127.0.0.1:17071
    - port:
        number: 7070
        protocol: TCP
        name: tcplocal
      default_endpoint: 127.0.0.1:17070
    # Fortio ports
    - port:
        number: 18080
        protocol: HTTP
        name: http-echo
      default_endpoint: 127.0.0.1:28080
    - port:
        number: 18079
        protocol: TCP
        name: grpc-ping
      default_endpoint: 127.0.0.1:28079
