tests/integration/conformance/testdata/networking/sidecar/basic/mcp.yaml
constraints:
  - collection: istio/networking/v1alpha3/sidecars
    check:
    - exactlyOne:
      - equals: {
        "Body": {
          "egress": [
          {
            "hosts": [
              "istio-system/*"
            ],
            "port": {
              "name": "grpc-mixer",
              "number": 9091,
              "protocol": "GRPC"
            }
          },
          {
            "hosts": [
              "istio-system/*"
            ],
            "port": {
              "name": "grpc-mixer-mtls",
              "number": 15004,
              "protocol": "GRPC"
            }
          },
          {
            "hosts": [
              "none/*",
              "default/test.default"
            ]
          }
          ],
          "ingress": [
          {
            "default_endpoint": "127.0.0.1:17071",
            "port": {
              "name": "httplocal",
              "number": 7071,
              "protocol": "HTTP"
            }
          },
          {
            "default_endpoint": "127.0.0.1:17070",
            "port": {
              "name": "tcplocal",
              "number": 7070,
              "protocol": "TCP"
            }
          },
          {
            "default_endpoint": "127.0.0.1:28080",
            "port": {
              "name": "http-echo",
              "number": 18080,
              "protocol": "HTTP"
            }
          },
          {
            "default_endpoint": "127.0.0.1:28079",
            "port": {
              "name": "grpc-ping",
              "number": 18079,
              "protocol": "TCP"
            }
          }
          ]
        },
        "Metadata": {
          "name": "{{.Namespace}}/default"
        },
        "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.Sidecar"
      }
